--- a/index.html
+++ b/index.html
@@ -11,10 +11,22 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">Seu navegador não é compatível com isto.</iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela" > 
+                <img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="#" target="tela" >
+                <img src="imagens/logo-youtube.jpg" alt="Youtube">
+            </a><br>
+            <a href="https://github.com/DaviMarcarini1234" target="tela" >
+                <img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href="#" target="tela" >
+                <img src="imagens/logo-facebook.jpg" alt="Facebook">
+            </a><br>
+            <a href="#" target="tela" >
+                <img src="imagens/logo-instagram.jpg" alt="Instagram"><br>
+            </a>
         </section>
     </main>
 </body>
