--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
             <iframe src="home.html" name="tela" id="tela" frameborder="0">Seu navegador não é compatível com isto.</iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela" > 
+            <a href="home.html" target="tela" > 
                 <img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="#" target="tela" >
+            <a href="home.html" target="tela" >
                 <img src="imagens/logo-youtube.jpg" alt="Youtube">
             </a><br>
-            <a href="https://github.com/DaviMarcarini1234" target="tela" >
+            <a href="home.html" target="tela" >
                 <img src="imagens/logo-github.jpg" alt="Github"></a><br>
-            <a href="#" target="tela" >
+            <a href="home.html" target="tela" >
                 <img src="imagens/logo-facebook.jpg" alt="Facebook">
             </a><br>
-            <a href="#" target="tela" >
+            <a href="home.html" target="tela" >
                 <img src="imagens/logo-instagram.jpg" alt="Instagram"><br>
             </a>
         </section>
